tests/NormalTests/paczka1/fuzzy1/20806272.err
Error in line 16: UnM92C3CS5 A427 98,3
Error in line 17: UnM92C3CS5 S931 21,6
Error in line 27: 4RO2 A687 82,2
Error in line 32: 8Xq A687 75,6
Error in line 35: 8Xq S931 2,3
